@startuml
'https://plantuml.com/sequence-diagram
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Ship {
-mmsiCode
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-draft
-name
-vesselTypeId
-length
-width
-capacity
}

class ShipLocation {
-baseDateTime
-latitude
-longitude
-sog
-cog
-heading
-position
-transceiver
}

class Ports {
-identification
-name
}


Ship "1" -- "1..*" ShipLocation : has >
Ship "0..*"--"1" Ports: dock >


@enduml